Fix Gutenberg wide alignment CSS for block with fixed background

--- a/assets/css/main-rtl.css
+++ b/assets/css/main-rtl.css
@@ -1200,12 +1200,10 @@ button.suki-toggle:hover, button.suki-toggle:focus {
 }
 
 .suki-content-layout-narrow .alignwide {
-	position: relative;
-	right: 50%;
-	-webkit-transform: translate(50%, 0);
-	transform: translate(50%, 0);
 	width: 1140px;
 	max-width: 100vw;
+	margin-right: calc( -0.5 * 1140px + 50%);
+	margin-left: calc( -0.5 * 1140px + 50%);
 }
 
 .alignwide img {
@@ -1214,12 +1212,10 @@ button.suki-toggle:hover, button.suki-toggle:focus {
 
 .suki-content-layout-narrow .alignfull,
 .suki-content-layout-wide .alignfull {
-	position: relative;
-	right: 50%;
-	-webkit-transform: translate(50%, 0);
-	transform: translate(50%, 0);
 	width: 100vw;
 	max-width: 100vw;
+	margin-right: calc( -50vw + 50%);
+	margin-left: calc( -50vw + 50%);
 }
 
 body.suki-page-layout-boxed .suki-content-layout-narrow .alignfull, body.suki-page-layout-boxed
