--- a/assets/scss/_gutenberg.scss
+++ b/assets/scss/_gutenberg.scss
@@ -4,11 +4,10 @@
 
 .alignwide {
 	.suki-content-layout-narrow & {
-		position: relative;
-		left: 50%;
-		transform: translate( -50%, 0 );
 		width: 1140px; // default
 		max-width: 100vw;
+		margin-left: calc( -0.5 * 1140px + 50% ); // default
+		margin-right: calc( -0.5 * 1140px + 50% ); // default
 	}
 
 	img {
@@ -19,11 +18,10 @@
 .alignfull {
 	.suki-content-layout-narrow &,
 	.suki-content-layout-wide & {
-		position: relative;
-		left: 50%;
-		transform: translate( -50%, 0 );
 		width: 100vw;
 		max-width: 100vw;
+		margin-left: calc( -50vw + 50% );
+		margin-right: calc( -50vw + 50% );
 
 		body.suki-page-layout-boxed & {
 			width: 1400px; // default
